--- a/css/halfway_house_detail.css
+++ b/css/halfway_house_detail.css
@@ -69,381 +69,17 @@ body {
   letter-spacing: 3px;
 }
 
+.fa-mars {
+  color: deepskyblue;
+}
+
+.fa-venus {
+  color: #fc516d;
+}
+
 .container {
   max-width: 991px;
   margin: 0 auto;
-}
-
-.btns .btn {
-  font-size: 30px;
-  display: inline-block;
-  width: 50px;
-  height: 50px;
-  background-color: #fff;
-  line-height: 50px;
-  text-align: center;
-  overflow: hidden;
-  position: relative;
-  border-radius: 50%;
-  transition: .35s;
-  box-shadow: 0 5px 15px -5px rgba(0, 0, 0, 0.1);
-  padding-left: 3px;
-  padding-bottom: 3px;
-  z-index: 1;
-}
-
-.btns .btn:hover:before {
-  transition: .35s;
-  transition-timing-function: cubic-bezier(0.31, -0.105, 0.43, 1.59);
-  top: -10%;
-  left: -10%;
-}
-
-.btns .btn:before {
-  content: '';
-  display: block;
-  width: 120%;
-  height: 120%;
-  position: absolute;
-  transform: rotate(45deg);
-  top: 90%;
-  left: -110%;
-  z-index: -1;
-}
-
-.btns .fa {
-  vertical-align: middle;
-}
-
-.btns .btn.facebook {
-  color: #3b5998;
-}
-
-.btns .btn.facebook:before {
-  background-color: #3b5998;
-}
-
-.btns .btn.facebook:hover {
-  color: #fff;
-}
-
-.btns .btn.twitter {
-  color: #3cf;
-}
-
-.btns .btn.twitter:before {
-  background-color: #3cf;
-}
-
-.btns .btn.twitter:hover {
-  color: #fff;
-}
-
-.btns .btn.google {
-  color: #dc4a38;
-}
-
-.btns .btn.google:before {
-  background-color: #dc4a38;
-}
-
-.btns .btn.google:hover {
-  color: #fff;
-}
-
-.btns .btn.youtube {
-  color: #f00;
-}
-
-.btns .btn.youtube:before {
-  background-color: #f00;
-}
-
-.btns .btn.youtube:hover {
-  color: #fff;
-}
-
-header
-ul li:nth-child(2) {
-  background-color: #fff;
-  box-shadow: -2px 3px 5px rgba(63, 62, 62, 0.199);
-}
-
-header
-ul li:nth-child(2) a {
-  color: #333;
-  font-family: notoSans_r;
-}
-
-header
-ul li:nth-child(2):after {
-  z-index: -1;
-  content: '';
-  display: block;
-  width: 34px;
-  height: 34px;
-  background-color: #fff;
-  position: absolute;
-  top: 7px;
-  right: -17px;
-  transform: rotate(45deg);
-  box-shadow: 3px 3px 5px rgba(63, 62, 62, 0.199);
-}
-
-.right {
-  background-image: url(../../images/marble.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  margin-left: 200px;
-  padding-top: 100px;
-}
-
-.right .banner {
-  background-image: url(../../images/halfdetail1.jpg);
-  background-position: 50%;
-  background-repeat: no-repeat;
-  width: 90%;
-  height: 700px;
-  margin: auto;
-  position: relative;
-}
-
-.right .banner h2 {
-  background-color: rgba(34, 103, 182, 0.7);
-  color: #000;
-  font-size: 30px;
-  width: 30%;
-  text-align: center;
-  position: absolute;
-  top: -50px;
-  left: 50%;
-  padding: 20px;
-}
-
-.right .banner .intro {
-  width: 55%;
-  position: absolute;
-  top: 400px;
-  left: -3%;
-  font-size: 18px;
-  line-height: 2.0;
-  padding: 20px;
-  background-color: rgba(35, 204, 204, 0.7);
-  z-index: 1;
-}
-
-.right .banner .contact {
-  width: 30%;
-  position: absolute;
-  top: 450px;
-  left: 73%;
-  font-size: 18px;
-  line-height: 2.0;
-  padding: 20px;
-  background-color: rgba(0, 153, 102, 0.7);
-  z-index: 1;
-}
-
-.right .halfwaypic {
-  margin: 5% auto;
-}
-
-.right .halfwaypic .container {
-  display: flex;
-  justify-content: space-around;
-}
-
-.right .halfwaypic .container .picture {
-  width: 25%;
-  margin: 0 10px;
-}
-
-.right .halfwaypic .container .picture img {
-  width: 100%;
-}
-
-.right .cat {
-  background-image: url(../../images/catbg.jpeg);
-  background-position: bottom 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  overflow: hidden;
-}
-
-.right .cat .flycat {
-  width: 5%;
-  overflow: hidden;
-  animation: aa 10s linear infinite;
-}
-
-.right .cat .flycat:nth-child(2) {
-  position: absolute;
-  top: -2%;
-  left: 10%;
-}
-
-.right .cat .flycat:nth-child(3) {
-  position: absolute;
-  top: -2%;
-  left: 85%;
-}
-
-@keyframes aa {
-  100% {
-    top: 100%;
-  }
-}
-
-.right .cat h2 {
-  width: 90%;
-  margin: auto;
-  padding: 5%;
-  text-align: center;
-  font-size: 30px;
-}
-
-.right .cat .container {
-  display: flex;
-  justify-content: space-around;
-  padding-bottom: 5%;
-}
-
-.right .cat .container .threecat {
-  position: relative;
-}
-
-.right .cat .container .threecat .favorite {
-  position: absolute;
-  top: 5px;
-  right: 33px;
-  color: #fa3737;
-  font-size: 30px;
-  z-index: 3;
-}
-
-.right .cat .container .threecat img {
-  width: 90%;
-}
-
-.right .cat .container .threecat .text {
-  font-size: 18px;
-  line-height: 1.71429;
-}
-
-.right .cat .container .threecat .text h3 {
-  font-size: 24px;
-  font-weight: bold;
-}
-
-.right .map {
-  width: 60%;
-  margin: auto;
-  padding-bottom: 5%;
-}
-
-.right .map h2 {
-  width: 90%;
-  margin: auto;
-  padding: 5%;
-  text-align: center;
-  font-size: 30px;
-}
-
-.right .map img {
-  width: 100%;
-}
-
-.right .talk {
-  background-image: url(../../images/talk.jpg);
-  background-position: bottom;
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding-bottom: 3%;
-}
-
-.right .talk .container {
-  width: 70%;
-  margin: 0 auto;
-}
-
-.right .talk .container:after {
-  content: '';
-  display: block;
-  clear: both;
-}
-
-.right .talk .container h2 {
-  width: 90%;
-  margin: auto;
-  padding: 5%;
-  text-align: center;
-  font-size: 30px;
-}
-
-.right .talk .container .article {
-  padding: 5px;
-  margin-bottom: 5%;
-  width: 55%;
-  float: left;
-  background: rgba(85, 136, 170, 0.788);
-  border-radius: 20px;
-}
-
-.right .talk .container .article:nth-child(3), .right .talk .container .article:nth-child(5) {
-  float: right;
-}
-
-.right .talk .container .article h3 {
-  font-size: 24px;
-  color: #EAAF88;
-  padding: 10px;
-}
-
-.right .talk .container .article p {
-  border: 1px dashed #fff;
-  border-left: none;
-  border-right: none;
-  border-radius: 20px;
-  color: #ddd;
-  min-height: 40px;
-  position: relative;
-  padding: 10px;
-  font-size: 14px;
-  line-height: 1.42857;
-}
-
-.right .talk .container .article p a {
-  display: flex;
-  justify-content: flex-end;
-  text-decoration: none;
-  color: #EAAF88;
-}
-
-.right .talk .container .article p a:hover {
-  color: #ddd;
-}
-
-.right .talk .container .article p:before,
-.right .talk .container .article p:after {
-  content: "";
-  display: block;
-  width: 12px;
-  height: 12px;
-  position: absolute;
-  background: #58a;
-  transform: rotate(45deg);
-  bottom: -12px;
-  left: 100px;
-}
-
-.right .talk .container .article p:after {
-  height: 10px;
-  width: 10px;
-  bottom: -7px;
-  border-right: 1px dashed #fff;
-  border-bottom: 1px dashed #fff;
 }
 
 header {
@@ -583,6 +219,388 @@ footer span {
   position: relative;
   top: -20px;
   padding: 10px;
+}
+
+.btns .btn {
+  font-size: 30px;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  background-color: #fff;
+  line-height: 50px;
+  text-align: center;
+  overflow: hidden;
+  position: relative;
+  border-radius: 50%;
+  transition: .35s;
+  box-shadow: 0 5px 15px -5px rgba(0, 0, 0, 0.1);
+  padding-left: 3px;
+  padding-bottom: 3px;
+  z-index: 1;
+}
+
+.btns .btn:hover:before {
+  transition: .35s;
+  transition-timing-function: cubic-bezier(0.31, -0.105, 0.43, 1.59);
+  top: -10%;
+  left: -10%;
+}
+
+.btns .btn:before {
+  content: '';
+  display: block;
+  width: 120%;
+  height: 120%;
+  position: absolute;
+  transform: rotate(45deg);
+  top: 90%;
+  left: -110%;
+  z-index: -1;
+}
+
+.btns .fa {
+  vertical-align: middle;
+}
+
+.btns .btn.facebook {
+  color: #3b5998;
+}
+
+.btns .btn.facebook:before {
+  background-color: #3b5998;
+}
+
+.btns .btn.facebook:hover {
+  color: #fff;
+}
+
+.btns .btn.twitter {
+  color: #3cf;
+}
+
+.btns .btn.twitter:before {
+  background-color: #3cf;
+}
+
+.btns .btn.twitter:hover {
+  color: #fff;
+}
+
+.btns .btn.google {
+  color: #dc4a38;
+}
+
+.btns .btn.google:before {
+  background-color: #dc4a38;
+}
+
+.btns .btn.google:hover {
+  color: #fff;
+}
+
+.btns .btn.youtube {
+  color: #f00;
+}
+
+.btns .btn.youtube:before {
+  background-color: #f00;
+}
+
+.btns .btn.youtube:hover {
+  color: #fff;
+}
+
+header
+ul li:nth-child(2) {
+  background-color: #fff;
+  box-shadow: -2px 3px 5px rgba(63, 62, 62, 0.199);
+}
+
+header
+ul li:nth-child(2) a {
+  color: #333;
+  font-family: notoSans_r;
+}
+
+header
+ul li:nth-child(2):after {
+  z-index: -1;
+  content: '';
+  display: block;
+  width: 34px;
+  height: 34px;
+  background-color: #fff;
+  position: absolute;
+  top: 7px;
+  right: -17px;
+  transform: rotate(45deg);
+  box-shadow: 3px 3px 5px rgba(63, 62, 62, 0.199);
+}
+
+.right {
+  background-image: url(../../images/marble.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  margin-left: 200px;
+  padding-top: 60px;
+}
+
+.right .banner {
+  background-image: url(../../images/halfdetail1.jpg);
+  background-position: 50%;
+  background-repeat: no-repeat;
+  width: 90%;
+  height: 650px;
+  margin: auto;
+  position: relative;
+}
+
+.right .banner h2 {
+  font-weight: bold;
+  letter-spacing: 15px;
+  background-color: rgba(34, 103, 182, 0.7);
+  color: #000;
+  font-size: 30px;
+  width: 30%;
+  text-align: center;
+  position: absolute;
+  top: -50px;
+  left: 50%;
+  padding: 20px;
+}
+
+.right .banner .intro {
+  width: 55%;
+  position: absolute;
+  top: 330px;
+  left: -3%;
+  font-size: 18px;
+  line-height: 2.0;
+  padding: 20px;
+  background-color: rgba(35, 204, 204, 0.7);
+  z-index: 1;
+  color: #111;
+}
+
+.right .banner .contact {
+  width: 30%;
+  position: absolute;
+  top: 400px;
+  left: 73%;
+  font-size: 18px;
+  line-height: 2.0;
+  padding: 20px;
+  background-color: rgba(0, 153, 102, 0.7);
+  z-index: 1;
+  color: #111;
+}
+
+.right .halfwaypic {
+  margin: 60px auto;
+}
+
+.right .halfwaypic .container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.right .halfwaypic .container .picture {
+  width: 25%;
+  margin: 0 10px;
+}
+
+.right .halfwaypic .container .picture img {
+  width: 100%;
+}
+
+.right .cat {
+  background-image: url(../../images/catbg2.jpeg);
+  background-position: bottom 80%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  overflow: hidden;
+}
+
+.right .cat .flycat {
+  width: 5%;
+  overflow: hidden;
+  animation: aa 10s linear infinite;
+}
+
+.right .cat .flycat:nth-child(2) {
+  position: absolute;
+  top: -2%;
+  left: 10%;
+}
+
+.right .cat .flycat:nth-child(3) {
+  position: absolute;
+  top: -2%;
+  left: 85%;
+}
+
+@keyframes aa {
+  100% {
+    top: 100%;
+  }
+}
+
+.right .cat h2 {
+  font-weight: bold;
+  letter-spacing: 15px;
+  width: 90%;
+  margin: auto;
+  padding: 5%;
+  text-align: center;
+  font-size: 30px;
+}
+
+.right .cat .container {
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 5%;
+}
+
+.right .cat .container .threecat {
+  position: relative;
+}
+
+.right .cat .container .threecat .favorite {
+  position: absolute;
+  top: 5px;
+  right: 33px;
+  color: #fa3737;
+  font-size: 30px;
+  z-index: 3;
+}
+
+.right .cat .container .threecat img {
+  width: 90%;
+}
+
+.right .cat .container .threecat .text {
+  font-size: 18px;
+  line-height: 1.71429;
+}
+
+.right .cat .container .threecat .text h3 {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.right .map {
+  width: 60%;
+  margin: auto;
+  padding-bottom: 5%;
+}
+
+.right .map h2 {
+  font-weight: bold;
+  width: 90%;
+  letter-spacing: 15px;
+  margin: auto;
+  padding: 5%;
+  text-align: center;
+  font-size: 30px;
+}
+
+.right .map img {
+  width: 100%;
+}
+
+.right .talk {
+  background-image: url(../../images/talk.jpg);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 3%;
+}
+
+.right .talk .container {
+  width: 70%;
+  margin: 0 auto;
+}
+
+.right .talk .container:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+.right .talk .container h2 {
+  font-weight: bold;
+  letter-spacing: 15px;
+  width: 90%;
+  margin: auto;
+  padding: 5%;
+  text-align: center;
+  font-size: 30px;
+}
+
+.right .talk .container .article {
+  padding: 5px;
+  margin-bottom: 5%;
+  width: 55%;
+  float: left;
+  background: rgba(85, 136, 170, 0.788);
+  border-radius: 20px;
+}
+
+.right .talk .container .article:nth-child(3), .right .talk .container .article:nth-child(5) {
+  float: right;
+}
+
+.right .talk .container .article h3 {
+  font-size: 24px;
+  color: #EAAF88;
+  padding: 10px;
+}
+
+.right .talk .container .article p {
+  border: 1px dashed #fff;
+  border-left: none;
+  border-right: none;
+  border-radius: 20px;
+  color: #ddd;
+  min-height: 40px;
+  position: relative;
+  padding: 10px;
+  font-size: 14px;
+  line-height: 1.42857;
+}
+
+.right .talk .container .article p a {
+  display: flex;
+  justify-content: flex-end;
+  text-decoration: none;
+  color: #EAAF88;
+}
+
+.right .talk .container .article p a:hover {
+  color: #ddd;
+}
+
+.right .talk .container .article p:before,
+.right .talk .container .article p:after {
+  content: "";
+  display: block;
+  width: 12px;
+  height: 12px;
+  position: absolute;
+  background: #58a;
+  transform: rotate(45deg);
+  bottom: -12px;
+  left: 100px;
+}
+
+.right .talk .container .article p:after {
+  height: 10px;
+  width: 10px;
+  bottom: -7px;
+  border-right: 1px dashed #fff;
+  border-bottom: 1px dashed #fff;
 }
 
 /*# sourceMappingURL=halfway_house_detail.css.map */
