--- a/sass/halfway_house_search.scss
+++ b/sass/halfway_house_search.scss
@@ -2,14 +2,15 @@
 @import 'base/_var.scss';
 @import 'base/_boxsizing.scss';
 @import 'base/_font.scss';
+@import "base/genderIcon";
 @import 'layout/_container.scss';
 @import 'mixins/_rwd.scss';
 @import 'mixins/_clearfloat.scss';
-@import './mixins/_navNow.scss';
+@import 'mixins/_navNow.scss';
+@import 'modules/_header.scss';
+@import 'modules/_footer.scss';
 @import 'modules/_btns.scss';
 @import 'respond/_small.scss';
 @import 'respond/_medium.scss';
 @import 'respond/_desktop.scss';
 @import 'modules/_halfway_house_search.scss';
-@import 'modules/_header.scss';
-@import 'modules/_footer.scss';
