--- a/css/catContent.css
+++ b/css/catContent.css
@@ -360,14 +360,15 @@ header ul li:nth-child(1):after {
 }
 
 .right {
+  width: calc(100% - 200px);
   margin-left: 200px;
 }
 
 .right .container1 {
-  width: calc(100% - 200px);
+  width: 100%;
   position: relative;
   margin-bottom: 100px;
-  padding-top: 60px;
+  padding: 60px 50px 0;
 }
 
 .right .container1,
@@ -380,21 +381,22 @@ header ul li:nth-child(1):after {
   position: relative;
 }
 
-.right .container1 .catItem .favorite {
-  position: absolute;
-  top: 20px;
-  left: 250px;
-  color: #fa3737;
-  font-size: 30px;
-  z-index: 3;
-}
-
 .right .container1 .catItem .img {
   width: 300px;
   height: auto;
   border: 8px #fff solid;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
   overflow: hidden;
+  position: relative;
+}
+
+.right .container1 .catItem .img .favorite {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: #fa3737;
+  font-size: 30px;
+  z-index: 3;
 }
 
 .right .container1 .catItem .img,
@@ -485,12 +487,122 @@ header ul li:nth-child(1):after {
   padding-left: 20px;
 }
 
-@media all and (min-width: 768px) and (max-width: 991px) {
-  .catItem figure {
+@media all and (max-width: 767px) {
+  header {
+    display: none;
+  }
+  .right {
+    width: 100%;
+    margin: 0;
+  }
+  .right .container1 {
+    padding-top: 0;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  .right .container1 .catItem .img,
+  .right .container1 .catItem figure {
+    display: block;
+    margin: 0;
+    margin: 0 auto;
+  }
+  .right .container1 .catItem figure {
+    height: auto;
+    padding-left: 0;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .right .container1 .catItem div.btn {
+    position: relative;
+    bottom: auto;
+    margin: 20px auto 0;
+    font-size: 0;
+    width: 100%;
+  }
+  .right .container1 .catItem div.btn button.defaultBtn {
+    font-size: 14px;
+    display: block;
+    float: right;
+    width: 48%;
+    max-width: 200px;
+  }
+  .right .container1 .catItem div.btn button.defaultBtn:first-child {
+    margin-right: 10px;
+    float: left;
+  }
+  .right .container1 .catItem div.btn:after {
+    content: '';
+    clear: both;
     display: block;
   }
-  footer .follow span {
-    color: red;
+  .right .container1 .donateForm {
+    width: 60%;
+    margin: 20px auto 0;
+  }
+  .right .container1 .introduction {
+    margin-top: 40px;
+  }
+  footer {
+    margin-left: 0;
+    width: 100%;
+  }
+}
+
+@media all and (min-width: 768px) and (max-width: 991px) {
+  header {
+    display: none;
+  }
+  .right {
+    width: 100%;
+    margin: 0;
+  }
+  .right .container1 {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  .right .container1 .catItem .img,
+  .right .container1 .catItem figure {
+    display: block;
+    margin: 0 auto;
+  }
+  .right .container1 .catItem figure {
+    height: auto;
+    padding-left: 0;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .right .container1 .catItem div.btn {
+    position: relative;
+    bottom: auto;
+    margin: 20px auto 0;
+    font-size: 0;
+    width: 60%;
+  }
+  .right .container1 .catItem div.btn button.defaultBtn {
+    display: block;
+    float: right;
+    width: 48%;
+    max-width: 200px;
+  }
+  .right .container1 .catItem div.btn button.defaultBtn:first-child {
+    margin-right: 10px;
+    float: left;
+  }
+  .right .container1 .catItem div.btn:after {
+    content: '';
+    clear: both;
+    display: block;
+  }
+  .right .container1 .donateForm {
+    width: 60%;
+    margin: 20px auto 0;
+  }
+  .right .container1 .introduction {
+    margin-top: 40px;
+  }
+  footer {
+    margin-left: 0;
+    width: 100%;
   }
 }
 
