--- a/sass/respond/_catSearchMedium.scss
+++ b/sass/respond/_catSearchMedium.scss
@@ -1,3 +1,23 @@
 @include respond-to(medium) {
-    
+    header {
+        display: none;
+    }
+    .right {
+        width: 100%;
+        margin: 0;
+        .container1 {
+            .catPic {
+                .catItem {
+                    display: block;
+                    margin: 0 auto;
+                    .catContent, figure{
+                        display: inline-block;
+                    }
+                }
+            }
+        }
+    }
+    footer {
+        margin-left: 0;
+    }
 }
