--- a/sass/respond/_catSearchSmall.scss
+++ b/sass/respond/_catSearchSmall.scss
@@ -1,3 +1,20 @@
 @include respond-to(small) {
-
+    header {
+        display: none;
+    }
+    .right {
+        width: 100%;
+        margin: 0;
+        .container1 {
+            .catPic {
+                .catItem {
+                    display: block;
+                    margin: 0 auto;
+                }
+            }
+        }
+    }
+    footer {
+        margin-left: 0;
+    }
 }
