--- a/sass/modules/_halfway_house_detail.scss
+++ b/sass/modules/_halfway_house_detail.scss
@@ -5,17 +5,16 @@
     background-size: cover;
     position: relative;
     margin-left: 200px;
-    padding-top: 60px;
+    padding-top: 50px;
     .banner {
         background-image: url(../../images/halfdetail1.jpg);
         background-position: 50%;
         background-repeat: no-repeat;
-        width: 90%;
-        height: 650px;
+        width: 85%;
+        height: 480px;
         margin: auto;
         position: relative;
         h2 {
-            font-weight: bold;
             letter-spacing: 15px;
             background-color: rgba(rgb(34, 103, 182), .7);
             color: #000;
@@ -23,16 +22,16 @@
             width: 30%;
             text-align: center;
             position: absolute;
-            top: -50px;
+            top: -20px;
             left: 50%;
             padding: 20px;
         }
         .intro {
             width: 55%;
             position: absolute;
-            top: 330px;
+            top: 280px;
             left: -3%;
-            font-size: $font-size-large;
+            font-size: $font-size-base;
             line-height: $line-height-base*1.4;
             padding: 20px;
             background-color: rgba(rgb(35, 204, 204), .7);
@@ -40,11 +39,11 @@
             color: #111;
         }
         .contact {
-            width: 30%;
+            width: 35%;
             position: absolute;
-            top: 400px;
-            left: 73%;
-            font-size: $font-size-large;
+            top: 300px;
+            left: 70%;
+            font-size: $font-size-base;
             line-height: $line-height-base*1.4;
             padding: 20px;
             background-color: rgba(#096, .7);
@@ -54,7 +53,7 @@
     }
 
     .halfwaypic {
-        margin: 60px auto;
+        margin: 50px auto;
         .container {
             display: flex;
             justify-content: space-around;
@@ -122,7 +121,7 @@
                     width: 90%;
                 }
                 .text {
-                    font-size: $font-size-large;
+                    font-size: $font-size-base;
                     line-height: $line-height-base*1.2;
                     h3 {
                         font-size: $font-size-h3;
