--- a/sass/modules/_halfway_house_search.scss
+++ b/sass/modules/_halfway_house_search.scss
@@ -9,7 +9,7 @@
     z-index: 0;
     .searchsection{
         padding: 50px;
-        width: 60%;  
+        width: 70%;  
         margin: auto;
         background-color: rgba(90, 107, 126, 0.767);
         position: relative;
@@ -167,10 +167,8 @@
             z-index: 999;
             height: 40px;
             width: 300px;
-            top: 50%;
-            left: 50%;
-            margin-left: 25px;
-            transform: translate(50%, 50%);
+            top: 60%;
+            left: 70%;
         }
 
         #content.on {
@@ -269,7 +267,9 @@
             transform: translate(-100%, -50%);
         }
     }
-    
+    #selectBox {
+        display: none;
+    }
 
 
     h2 {
@@ -281,15 +281,16 @@
     }
     .item {
         width: 70%;
-        margin: 100px auto 300px 23%;
+        margin: 100px auto 200px 15%;
         position: relative;
         .text {
-            width: 40%;
+            width: 50%;
             background-color: #fff;
             font-size: $font-size-base;
             line-height: 30px;
-            padding-left: 5%;
-            padding-bottom: 5%;
+            padding-left: 3%;
+            padding-bottom: 3%;
+            box-shadow: 12px 10px 20px -10px #333;
             h3 {
                 font-size: $font-size-h3;
                 padding-top: 8%;
@@ -298,23 +299,24 @@
         }
         .pic {
             position: absolute;
-            top: -30px;
-            left: 38%;
+            top: -15px;
+            left: 48%;
+            box-shadow: 12px 10px 20px -10px #333;
             img {
-                width: 70%;
-                min-width: 250px;
+                width: 100%;
             }
         }
         .bg {
             position: absolute;
             top: 13%;
             left: 5%;
-            width: 75%;
-            height: 300px;
+            width: 100%;
+            height: 120%;
+            box-shadow: 12px 10px 10px -4px #aaa;
             z-index: -3;
         }
         .bg1 {
-            background-color: rgba(173, 177, 70, 0.767);
+            background-color: rgba(66, 136, 115, 0.767);
         }
         .bg2 {
             background-color: rgba(199, 79, 73, 0.767);
