--- a/css/footer.css
+++ b/css/footer.css
@@ -123,6 +123,9 @@ body {
   max-width: 991px;
   margin: 0 auto; }
 
+input, select {
+  outline: none; }
+
 footer {
   background-color: #f5eae3;
   margin-left: 200px;
