--- a/sass/index.scss
+++ b/sass/index.scss
@@ -13,3 +13,4 @@
 @import 'respond/_small.scss';
 @import 'respond/_medium.scss';
 @import 'respond/_desktop.scss';
+@import './modules/_loading.scss';
