--- a/css/index.css
+++ b/css/index.css
@@ -123,6 +123,9 @@ body {
   max-width: 991px;
   margin: 0 auto; }
 
+input, select {
+  outline: none; }
+
 footer {
   background-color: #f5eae3;
   margin-left: 200px;
@@ -164,7 +167,7 @@ header {
   position: fixed;
   padding-left: 15px;
   box-shadow: 2px 0 10px rgba(153, 153, 153, 0.315);
-  z-index: 99999999999999999999; }
+  z-index: 9999999; }
   header .logo {
     position: relative;
     top: 70px;
@@ -222,14 +225,14 @@ header {
         transform: scale(1.15);
         transition: .3s; }
 
-.pick-kit .pick-title h2, .shelter h2, .shop .shop-title h2 {
+.pick-kit .pick-title h2, .half .half-title h2, .shop .shop-title h2 {
   font-size: 18px;
   color: #fff;
   background-color: #333;
   padding: 15px 30px;
   margin: 15px 0; }
 
-.pick-kit .pick-title h3, .shelter h3, .shop .shop-title h3 {
+.pick-kit .pick-title h3, .half .half-title h3, .shop .shop-title h3 {
   color: #333;
   background-color: rgba(255, 255, 255, 0.537);
   padding: 10px 30px;
@@ -244,7 +247,8 @@ header {
   background-size: cover;
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  color: #fff; }
   .banner .find, .banner .wait {
     text-align: center;
     padding: 15px;
@@ -254,37 +258,47 @@ header {
       width: 40px;
       height: 55px;
       vertical-align: middle; }
+  .banner h2 {
+    text-align: center;
+    font-size: 24px;
+    padding: 15px; }
   .banner .search {
     position: relative; }
-    .banner .search input {
-      margin: 15px auto;
-      display: block;
+    .banner .search select {
       background-color: rgba(153, 153, 153, 0.493);
       border: 3px solid #fff;
       border-radius: 40px;
-      width: 150%;
-      position: relative;
-      left: -25%;
-      padding: 10px 30px;
+      text-align-last: center;
+      padding: 10px 0;
+      font-size: 18px;
+      color: #fff;
+      cursor: pointer; }
+    .banner .search input {
+      margin: 15px auto;
+      background-color: rgba(153, 153, 153, 0.493);
+      border: 3px solid #fff;
+      letter-spacing: 2px;
+      border-radius: 40px;
+      padding: 10px 37.5px 10px 15px;
       font-size: 18px; }
       .banner .search input:-moz-placeholder {
-        color: #111; }
+        color: #fff; }
       .banner .search input::-webkit-input-placeholder {
-        color: #111; }
+        color: #fff; }
       .banner .search input:-ms-input-placeholder {
-        color: #111; }
+        color: #fff; }
     .banner .search .fa-search {
-      color: #555;
+      color: #fff;
       position: absolute;
-      right: -70px;
-      top: 6px; }
+      right: 10px;
+      top: 30px; }
 
 .pick-kit {
   margin-left: 200px;
   text-align: center;
   height: 100vh;
   position: relative;
-  background-image: url(../images/marble.jpg); }
+  background-image: url(../images/wood.jpg); }
   .pick-kit .pick-title {
     height: 20vh;
     display: flex;
@@ -294,56 +308,68 @@ header {
       line-height: 10px; }
   .pick-kit ul {
     width: 100%;
-    height: 80vh;
     position: absolute;
-    bottom: 0; }
-    .pick-kit ul a {
-      text-decoration: none;
-      color: #333; }
-      .pick-kit ul a li {
-        width: 33.33333%;
-        height: 100%;
-        float: left; }
-      .pick-kit ul a .bubble {
-        width: 200px;
-        height: 200px;
-        border-radius: 50%;
-        display: block;
-        background-color: rgba(255, 255, 255, 0.687);
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center; }
-        .pick-kit ul a .bubble span {
-          display: block;
-          padding: 5px; }
-      .pick-kit ul a:nth-child(odd) .bubble {
-        position: relative;
-        top: 50%; }
-      .pick-kit ul a:nth-child(even) .bubble {
-        position: relative;
-        top: 10%; }
-      .pick-kit ul a:nth-child(1) li {
+    bottom: 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-bottom: 10vh; }
+    .pick-kit ul li {
+      width: 28%;
+      float: left; }
+      .pick-kit ul li .cat_list_bg {
+        width: 100%;
+        height: 70vh;
+        background-color: #fff;
+        padding: 10px; }
+        .pick-kit ul li .cat_list_bg a {
+          text-decoration: none;
+          color: #333; }
+          .pick-kit ul li .cat_list_bg a .cat_list {
+            height: 100%;
+            background: #369;
+            box-shadow: 3px 2px 6px rgba(0, 0, 0, 0.76), -1px -1px 6px rgba(0, 0, 0, 0.555); }
+            .pick-kit ul li .cat_list_bg a .cat_list .bubble {
+              width: 200px;
+              height: 200px;
+              border-radius: 50%;
+              display: block;
+              background-color: rgba(255, 255, 255, 0.687);
+              margin: 0 auto;
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center; }
+              .pick-kit ul li .cat_list_bg a .cat_list .bubble span {
+                display: block;
+                padding: 5px; }
+      .pick-kit ul li:nth-child(1) .cat_list_bg a .cat_list {
         background-image: url(../images/catcat_171225_0011.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center; }
-      .pick-kit ul a:nth-child(2) li {
+      .pick-kit ul li:nth-child(2) .cat_list_bg a .cat_list {
         background-image: url(../images/catcat_171225_0010.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center; }
-      .pick-kit ul a:nth-child(3) li {
+      .pick-kit ul li:nth-child(3) .cat_list_bg a .cat_list {
         background-image: url(../images/catcat_171228_0012.jpg);
         background-repeat: no-repeat;
-        background-size: cover; }
+        background-size: cover;
+        background-position: center; }
+      .pick-kit ul li:nth-child(odd) .cat_list_bg a .cat_list .bubble {
+        position: relative;
+        top: 50%; }
+      .pick-kit ul li:nth-child(even) .cat_list_bg a .cat_list .bubble {
+        position: relative;
+        top: 10%; }
   .pick-kit .arrow {
     width: 50px;
     height: 60px;
-    background-color: rgba(248, 252, 255, 0.719);
+    background-color: rgba(0, 0, 0, 0.411);
     position: absolute;
-    top: 57vh;
+    top: 50vh;
     z-index: 666; }
     .pick-kit .arrow img {
       width: 100%;
@@ -351,49 +377,53 @@ header {
   .pick-kit .right-arrow {
     right: 0; }
 
-.shelter {
+.half {
   margin-left: 200px;
-  background-image: url(../images/marble.jpg);
+  background-image: url(../images/wood.jpg);
   background-repeat: no-repeat;
-  background-size: cover; }
-  .shelter .shelter-title {
+  background-size: cover;
+  height: 100vh; }
+  .half .half-title {
     height: 20vh;
     display: flex;
     align-items: center; }
-  .shelter h2 {
-    height: 40px;
-    line-height: 10px; }
-  .shelter .shelter-home {
-    height: 80vh;
-    width: 75%;
-    margin: auto; }
-    .shelter .shelter-home .figure {
-      width: 55%;
-      height: 30vh;
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center;
-      position: relative; }
-      .shelter .shelter-home .figure:nth-child(1) {
-        background-image: url(../images/half_1.jpg); }
-      .shelter .shelter-home .figure:nth-child(2) {
-        background-image: url(../images/half_2.jpg);
-        margin-top: 6vh; }
-    .shelter .shelter-home .homeContext {
-      position: absolute;
-      width: 80%;
-      padding: 15px;
-      padding-left: 50px;
-      border: 2px solid #333;
-      background-color: #fff;
-      right: -60%;
-      bottom: -30px;
-      z-index: 666; }
-      .shelter .shelter-home .homeContext span {
-        padding: 5px;
-        display: block; }
-      .shelter .shelter-home .homeContext .shelter-name {
-        font-family: notoSans_r; }
+    .half .half-title h2 {
+      height: 40px;
+      line-height: 10px; }
+  .half .half-item {
+    padding: 7.5px 15px;
+    height: 25vh;
+    margin: 0.84vh 0;
+    display: flex;
+    background-color: #fff; }
+  .half .half-qty {
+    width: 20%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .half .half-qty img {
+      width: 40px;
+      height: 55px;
+      margin: 0 5px; }
+  .half .half-pic {
+    width: 50%;
+    height: 100%;
+    background-image: url(../images/half_1.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover; }
+  .half .half-text {
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 5%; }
+    .half .half-text .half-name {
+      font-family: notoSans_r;
+      font-size: 18px; }
+    .half .half-text span {
+      margin: 10px 0; }
 
 .shop {
   margin-left: 200px;
@@ -432,3 +462,18 @@ header {
         font-weight: bolder;
         padding: 15px;
         display: block; }
+
+#loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 999999999999999999999999999999;
+  background-color: rgba(44, 44, 44, 0.856);
+  transition: .3s; }
+  #loading #loadingCat {
+    position: absolute;
+    display: block;
+    top: calc(50% - 100px);
+    left: calc(50% - 100px); }
