--- a/css/member.css
+++ b/css/member.css
@@ -123,6 +123,9 @@ body {
   max-width: 991px;
   margin: 0 auto; }
 
+input, select {
+  outline: none; }
+
 footer {
   background-color: #f5eae3;
   margin-left: 200px;
@@ -164,7 +167,7 @@ header {
   position: fixed;
   padding-left: 15px;
   box-shadow: 2px 0 10px rgba(153, 153, 153, 0.315);
-  z-index: 99999999999999999999; }
+  z-index: 9999999; }
   header .logo {
     position: relative;
     top: 70px;
