--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -1,18 +1,19 @@
-%h2-btn{
+%h2-btn {
     font-size: $font-size-h4;
     color: #fff;
     background-color: #333;
     padding: 15px 30px;
     margin: $gap 0;
 }
-%h3-btn{
+
+%h3-btn {
     color: #333;
     background-color: rgba(255, 255, 255, 0.537);
     padding: 10px 30px;
     border: 2px solid #333;
     margin: $gap 0;
 }
-.banner{
+.banner {
     margin-left: 200px;
     height: 100vh;
     background-image: url(../images/AdobeStock_112482963.jpeg);
@@ -21,247 +22,280 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    .find{
+    color: #fff;
+    .find {
         text-align: center;
         padding: $gap;
         font-weight: bolder;
         font-size: $font-size-large;
-        img{            
+        img {
             width: 40px;
             height: 55px;
             vertical-align: middle;
         }
     }
-    .wait{
+    .wait {
         @extend .find;
     }
-    .search{
+    h2 {
+        text-align: center;
+        font-size: $font-size-h3;
+        padding: $gap;
+    }
+    .search {
         position: relative;
-        input{
-            margin: $gap auto;
-            display: block;
+        select {
             background-color: rgba(153, 153, 153, 0.493);
             border: 3px solid #fff;
             border-radius: 40px;
-            width: 150%;
-            position: relative;
-            left: -25%;
-            padding: 10px $gap*2;
+            text-align-last: center;
+            padding: 10px 0;
             font-size: $font-size-h4;
-            &:-moz-placeholder{
-                color: #111;
+            color: #fff;
+            cursor: pointer;
+        }
+        input {
+            margin: $gap auto;
+            background-color: rgba(153, 153, 153, 0.493);
+            border: 3px solid #fff;
+            letter-spacing: 2px;
+            border-radius: 40px;
+            padding: 10px $gap*2.5 10px $gap;
+            font-size: $font-size-h4;
+            &:-moz-placeholder {
+                color: #fff;
             }
-            &::-webkit-input-placeholder{
-                color: #111;
+            &::-webkit-input-placeholder {
+                color: #fff;
             }
-            &:-ms-input-placeholder{
-                color: #111;
+            &:-ms-input-placeholder {
+                color: #fff;
             }
         }
-        .fa-search{
-            color: #555;
+        .fa-search {
+            color: #fff;
             position: absolute;
-            right: -70px;
-            top: 6px;
+            right: 10px;
+            top: 30px;
         }
     }
 }
-.pick-kit{
+
+.pick-kit {
     margin-left: 200px;
     text-align: center;
     height: 100vh;
     position: relative;
-    background-image: url(../images/marble.jpg);
-    .pick-title{
+    background-image: url(../images/wood.jpg);
+    .pick-title {
         height: 20vh;
         display: flex;
         align-items: center;
-        h2{
+        h2 {
             @extend %h2-btn;
             height: 40px;
             line-height: 10px;
         }
-        h3{
+        h3 {
             @extend %h3-btn;
         }
     }
-    ul{
+    ul {
         width: 100%;
-        height: 80vh;
         position: absolute;
         bottom: 0;
-        a{
-            text-decoration: none;
-            color: #333;
-            li{
-                width: 33.33333%;
-                height: 100%;
-                float: left;
-            }
-            .bubble{
-                width: 200px;
-                height: 200px;
-                border-radius: 50%;
-                display: block;
-                background-color: rgba(255, 255, 255, 0.687);
-                margin: 0 auto;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                span{
-                    display: block;
-                    padding: 5px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        padding-bottom: 10vh;
+        li {
+            width: 28%;
+            float: left;
+            .cat_list_bg {
+                width: 100%;
+                height: 70vh;
+                background-color: #fff;
+                padding: 10px;
+                a {
+                    text-decoration: none;
+                    color: #333;
+                    .cat_list {
+                        height: 100%;
+                        background: #369;
+                        box-shadow: 3px 2px 6px rgba(0, 0, 0, 0.76),-1px -1px 6px rgba(0, 0, 0, 0.555);
+                        .bubble {
+                            width: 200px;
+                            height: 200px;
+                            border-radius: 50%;
+                            display: block;
+                            background-color: rgba(255, 255, 255, 0.687);
+                            margin: 0 auto;
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: center;
+                            span {
+                                display: block;
+                                padding: 5px;
+                            }
+                        }
+                    }
                 }
             }
-            &:nth-child(odd) .bubble{
-                position: relative;
-                top:50%;
-            }
-            &:nth-child(even) .bubble{
-                position: relative;
-                top:10%;
-            }
-            &:nth-child(1) li{
+            &:nth-child(1) .cat_list_bg a .cat_list {
                 background-image: url(../images/catcat_171225_0011.jpg);
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-position: center;
             }
-            &:nth-child(2) li{
+            &:nth-child(2) .cat_list_bg a .cat_list {
                 background-image: url(../images/catcat_171225_0010.jpg);
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-position: center;
             }
-            &:nth-child(3) li{
+            &:nth-child(3) .cat_list_bg a .cat_list {
                 background-image: url(../images/catcat_171228_0012.jpg);
                 background-repeat: no-repeat;
                 background-size: cover;
+                background-position: center;
+            }
+            &:nth-child(odd) .cat_list_bg a .cat_list .bubble {
+                position: relative;
+                top: 50%;
+            }
+            &:nth-child(even) .cat_list_bg a .cat_list .bubble {
+                position: relative;
+                top: 10%;
             }
         }
     }
-    .arrow{
+    .arrow {
         width: 50px;
         height: 60px;
-        background-color: rgba(248, 252, 255, 0.719);
+        background-color: rgba(0, 0, 0, 0.411);
         position: absolute;
-        top: 57vh;
+        top: 50vh;
         z-index: 666;
-        img{
+        img {
             width: 100%;
             height: 100%;
         }
     }
-    .right-arrow{
+    .right-arrow {
         right: 0;
     }
 }
-.shelter{
+
+.half {
     margin-left: 200px;
-    background-image: url(../images/marble.jpg);
+    background-image: url(../images/wood.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    .shelter-title{
+    height: 100vh;
+    .half-title {
         height: 20vh;
         display: flex;
         align-items: center;
-    }
-    h2{
-        @extend %h2-btn;
-        height: 40px;
-        line-height: 10px;
-    }
-    h3{
-        @extend %h3-btn;
-    }
-    .shelter-home{
-        height: 80vh;
-        width: 75%;
-        margin: auto;
-        .figure{
-            width: 55%;
-            height: 30vh;
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
-            position: relative;
-            &:nth-child(1){
-                background-image: url(../images/half_1.jpg);
-            }
-            &:nth-child(2){
-                background-image: url(../images/half_2.jpg);
-                margin-top: 6vh;
-            }
+        h2 {
+            @extend %h2-btn;
+            height: 40px;
+            line-height: 10px;
         }
-        .homeContext{
-            position: absolute;
-            width: 80%;
-            padding: $gap;
-            padding-left: 50px;
-            border: 2px solid #333;
-            background-color: #fff;
-            right: -60%;
-            bottom: -30px;
-            z-index: 666;
-            span{
-                padding: 5px;
-                display: block;
-            }
-            .shelter-name{
-                font-family: notoSans_r;
-            }
+        h3 {
+            @extend %h3-btn;
+        }
+    }
+    .half-item{
+        padding: $gap/2 $gap;
+        height: 25vh;
+        margin: 0.84vh 0;
+        display: flex;
+        background-color: #fff;
+    }
+    .half-qty{
+        width: 20%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img{
+            width: 40px;
+            height: 55px;
+            margin: 0 5px;
+        }
+    }
+    .half-pic{
+        width: 50%;
+        height: 100%;
+        background-image: url(../images/half_1.jpg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
+    .half-text{
+        width: 25%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-left: 5%;
+        .half-name{
+            font-family: notoSans_r;
+            font-size: $font-size-h4;
+        }
+        span{
+            margin: 10px 0;
         }
     }
 }
-.shop{
+
+.shop {
     margin-left: 200px;
     height: 100vh;
     overflow: hidden;
     background-image: url(../images/wood.jpg);
-    .container{
+    .container {
         @include afterClear();
         text-align: center;
         display: flex;
         justify-content: space-around;
     }
-    .shop-left{
+    .shop-left {
         position: relative;
         top: -600px;
         float: left;
-        img{
+        img {
             display: block;
             margin: 10px;
         }
     }
-    .shop-right{
+    .shop-right {
         @extend .shop-left;
         top: -300px;
     }
-    .shop-title{
+    .shop-title {
         margin-top: 15vh;
-        h2{
+        h2 {
             @extend %h2-btn;
         }
-        h3{
+        h3 {
             @extend %h3-btn;
         }
     }
-    .prod-list{
+    .prod-list {
         padding: 60px 40px;
         background-color: rgba(255, 255, 255, 0.537);
         border: 2px solid #fff;
         margin-top: 60px;
-        li{
+        li {
             position: relative;
-            a{
+            a {
                 text-decoration: none;
                 color: #222;
                 font-weight: bolder;
                 padding: $gap;
                 display: block;
-            }
-            // &:hover:after{
+            } // &:hover:after{
             //     position: absolute;
             //     content: '';
             //     bottom:0;
