--- a/css/halfway_house_search.css
+++ b/css/halfway_house_search.css
@@ -349,11 +349,18 @@ header ul li:nth-child(2):after {
   padding: 50px;
   width: 70%;
   margin: auto;
-  background-color: rgba(90, 107, 126, 0.767);
+  background-color: #FEF2E6;
   position: relative;
   top: 0;
   left: 0;
   z-index: 0;
+}
+
+.right .searchsection .flycat {
+  width: 160px;
+  position: absolute;
+  top: 60%;
+  left: 80%;
 }
 
 .right .searchsection .dropholder {
@@ -363,10 +370,10 @@ header ul li:nth-child(2):after {
   padding: 0 0 0 20px;
   border-radius: 60px;
   font: 18px arial;
-  color: #fff;
+  color: #333;
   position: relative;
   box-sizing: border-box;
-  border: 2px solid #fff;
+  border: 2px solid #333;
   animation: move 3s ease-in-out infinite;
   position: relative;
 }
@@ -414,12 +421,12 @@ header ul li:nth-child(2):after {
   border-radius: 0 60px 60px 0;
   cursor: pointer;
   height: 57px;
-  border-left: 2px solid #fff;
+  border-left: 2px solid #333;
   position: relative;
 }
 
 .right .searchsection .dropdown:hover {
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(253, 222, 191, 0.9);
   color: #333;
 }
 
@@ -443,7 +450,7 @@ header ul li:nth-child(2):after {
   transform: rotatey(100deg) rotateX(5deg);
   backface-visibility: hidden;
   background-color: transparent;
-  border: 2px solid #fff;
+  border: 2px solid #333;
   border-radius: 5px;
   transition: all 0.8s;
   z-index: 5;
@@ -452,12 +459,12 @@ header ul li:nth-child(2):after {
 
 .right .searchsection .menu li {
   padding: 10px 10px;
-  color: #e8f8ff;
+  color: #333;
   transition: all 0.3s;
 }
 
 .right .searchsection .menu li:hover {
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(253, 222, 191, 0.9);
   color: #333;
   padding-left: 20px;
 }
@@ -528,10 +535,10 @@ header ul li:nth-child(2):after {
   box-sizing: border-box;
   width: 50px;
   height: 50px;
-  border: 4px solid #FFFFFF;
+  border: 4px solid #333;
   border-radius: 50%;
   background: none;
-  color: #fff;
+  color: #333;
   font-size: 14px;
   font-weight: 400;
   outline: none;
@@ -562,7 +569,7 @@ header ul li:nth-child(2):after {
   position: absolute;
   width: 20px;
   height: 4px;
-  background-color: #fff;
+  background-color: #333;
   transform: rotate(45deg);
   margin-top: 26px;
   margin-left: 17px;
@@ -581,7 +588,7 @@ header ul li:nth-child(2):after {
   height: 4px;
   margin-top: -1px;
   margin-left: -13px;
-  background-color: #fff;
+  background-color: #333;
   transform: rotate(45deg);
   transition: 0.2s ease-in-out;
 }
@@ -591,7 +598,7 @@ header ul li:nth-child(2):after {
   position: absolute;
   width: 27px;
   height: 4px;
-  background-color: #fff;
+  background-color: #333;
   margin-top: -1px;
   margin-left: -13px;
   cursor: pointer;
@@ -604,9 +611,9 @@ header ul li:nth-child(2):after {
   width: 350px;
   height: 50px;
   border-radius: 40px;
-  border: 2px solid #FFFFFF;
+  border: 2px solid #333;
   background: none;
-  color: #fff;
+  color: #333;
   font-family: Roboto;
   font-size: 14px;
   font-weight: 400;
