--- a/sass/modules/_halfway_house_search.scss
+++ b/sass/modules/_halfway_house_search.scss
@@ -11,11 +11,17 @@
         padding: 50px;
         width: 70%;  
         margin: auto;
-        background-color: rgba(90, 107, 126, 0.767);
+        background-color:#FEF2E6;
         position: relative;
         top: 0;
         left: 0;
         z-index: 0;
+        .flycat{
+            width: 160px;
+            position: absolute;
+            top: 60%;
+            left: 80%;
+        }
         .dropholder {
             width: 322px;
             height: 60px;
@@ -23,10 +29,10 @@
             padding: 0 0 0 20px;
             border-radius: 60px;
             font: 18px arial;
-            color: #fff;
+            color: #333;
             position: relative;
             box-sizing: border-box;
-            border: 2px solid #fff;
+            border: 2px solid #333;
             animation: move 3s ease-in-out infinite;
             position: relative;
             &:after {
@@ -72,10 +78,10 @@
             border-radius: 0 60px 60px 0;
             cursor: pointer;
             height: 57px;
-            border-left: 2px solid #fff;
+            border-left: 2px solid #333;
             position: relative;
             &:hover {
-                background-color: rgba(255, 255, 255, 0.9);
+                background-color: rgba(rgb(253, 222, 191), 0.9);
                 color: #333;
             }
             &:after {
@@ -99,17 +105,17 @@
             transform: rotatey(100deg) rotateX(5deg);
             backface-visibility: hidden;
             background-color: transparent;
-            border: 2px solid #fff;
+            border: 2px solid #333;
             border-radius: 5px;
             transition: all 0.8s;
             z-index: 5;
             overflow: hidden;
             li {
                 padding: 10px 10px;
-                color: #e8f8ff;
+                color: #333;
                 transition: all 0.3s;
                 &:hover {
-                    background-color: rgba(255, 255, 255, 0.9);
+                    background-color: rgba(rgb(253, 222, 191), 0.9);
                     color: #333;
                     padding-left: 20px;
                 }
@@ -182,10 +188,10 @@
             box-sizing: border-box;
             width: 50px;
             height: 50px;
-            border: 4px solid #FFFFFF;
+            border: 4px solid #333;
             border-radius: 50%;
             background: none;
-            color: #fff;
+            color: #333;
             font-size: $font-size-base;
             font-weight: 400;
             outline: none;
@@ -214,7 +220,7 @@
                 position: absolute;
                 width: 20px;
                 height: 4px;
-                background-color: #fff;
+                background-color: #333;
                 transform: rotate(45deg);
                 margin-top: 26px;
                 margin-left: 17px;
@@ -232,7 +238,7 @@
                 height: 4px;
                 margin-top: -1px;
                 margin-left: -13px;
-                background-color: #fff;
+                background-color: #333;
                 transform: rotate(45deg);
                 transition: 0.2s ease-in-out;
             }
@@ -241,7 +247,7 @@
                 position: absolute;
                 width: 27px;
                 height: 4px;
-                background-color: #fff;
+                background-color: #333;
                 margin-top: -1px;
                 margin-left: -13px;
                 cursor: pointer;
@@ -255,9 +261,9 @@
             width: 350px;
             height: 50px;
             border-radius: 40px;
-            border: 2px solid #FFFFFF;
+            border: 2px solid #333;
             background: none;
-            color: #fff;
+            color: #333;
             font-family: Roboto;
             font-size: $font-size-base;
             font-weight: 400;
