--- a/css/halfway_house_detail.css
+++ b/css/halfway_house_detail.css
@@ -82,6 +82,10 @@ body {
   margin: 0 auto;
 }
 
+input, select {
+  outline: none;
+}
+
 header {
   background-color: #EAAF88;
   width: 200px;
@@ -89,7 +93,7 @@ header {
   position: fixed;
   padding-left: 15px;
   box-shadow: 2px 0 10px rgba(153, 153, 153, 0.315);
-  z-index: 99999999999999999999;
+  z-index: 9999999;
 }
 
 header .logo {
@@ -220,9 +224,6 @@ footer span {
   top: -20px;
   padding: 10px;
 }
-
-input, select {
-  outline: none; }
 
 .btns .btn {
   font-size: 30px;
