--- a/css/catSearch.css
+++ b/css/catSearch.css
@@ -164,7 +164,8 @@ body {
 }
 
 input, select {
-  outline: none; }
+  outline: none;
+}
 
 footer {
   background-color: #f5eae3;
@@ -222,7 +223,7 @@ header {
   position: fixed;
   padding-left: 15px;
   box-shadow: 2px 0 10px rgba(153, 153, 153, 0.315);
-  z-index: 99999999999999999999;
+  z-index: 9999999;
 }
 
 header .logo {
